# matrix_fill

./: .pre-commit-config.yaml  Makefile  main.py  pyproject.toml
matrix_fill/: methods.py
tests/: test_matrix_fill.py
