[tool.poetry]
name = "matrix_fill"
version = "0.0.1"
description = "The matrix fill spiral challenge"
authors = ["Roberto Lizana"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "1.6.0"
black = "22.6.0"
flake8 = "4.0.1"
isort = "5.10.1"
pre-commit = "2.12.1"
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
